@@ -129,32 +129,37 @@ void FileList::dropEvent( QDropEvent *event )
 
     for( int i=0; i<q_urls.size(); i++ )
     {
-        QString codecName = config->pluginLoader()->getCodecFromFile( q_urls.at(i) );
+        QString mimeType;
+        QString codecName = config->pluginLoader()->getCodecFromFile( q_urls.at(i), &mimeType );
 
-        if( codecName == "inode/directory" || config->pluginLoader()->canDecode(codecName,&errorList) )
+        if( mimeType == "inode/directory" || config->pluginLoader()->canDecode(codecName,&errorList) )
         {
             k_urls += q_urls.at(i);
         }
         else
         {
-            if( !codecName.startsWith("audio") && !codecName.startsWith("video") && !codecName.startsWith("application") )
+            if( codecName.isEmpty() && !mimeType.startsWith("audio") && !mimeType.startsWith("video") && !mimeType.startsWith("application") )
                 continue;
 
-            if( codecName == "application/x-ole-storage" || // Thumbs.db
-                codecName == "application/x-wine-extension-ini" ||
-                codecName == "application/x-cue" ||
-                codecName == "application/x-k3b" ||
-                codecName == "application/pdf" ||
-                codecName == "application/x-trash" ||
-                codecName.startsWith("application/vnd.oasis.opendocument") ||
-                codecName.startsWith("application/vnd.openxmlformats-officedocument") ||
-                codecName.startsWith("application/vnd.sun.xml")
+            if( mimeType == "application/x-ole-storage" || // Thumbs.db
+                mimeType == "application/x-wine-extension-ini" ||
+                mimeType == "application/x-cue" ||
+                mimeType == "application/x-k3b" ||
+                mimeType == "application/pdf" ||
+                mimeType == "application/x-trash" ||
+                mimeType.startsWith("application/vnd.oasis.opendocument") ||
+                mimeType.startsWith("application/vnd.openxmlformats-officedocument") ||
+                mimeType.startsWith("application/vnd.sun.xml")
             )
                 continue;
 
             fileName = KUrl(q_urls.at(i)).pathOrUrl();
+
+            if( codecName.isEmpty() )
+                codecName = mimeType;
             if( codecName.isEmpty() )
                 codecName = fileName.right(fileName.length()-fileName.lastIndexOf(".")-1);
+
             if( problems.value(codecName).count() < 2 )
             {
                 problems[codecName] += QStringList();
