@@ -180,6 +180,9 @@ QStringList soundkonverter_codec_lame::convertCommand( const KUrl& inputFile, co
     if( !_conversionOptions )
         return QStringList();
 
+    if( inputFile.isEmpty() )
+        return QStringList();
+
     QStringList command;
     ConversionOptions *conversionOptions = _conversionOptions;
     LameConversionOptions *lameConversionOptions = 0;
